src/objects/Sale_Offer_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Quantity__c</fullName>
        <label>Final Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Quantity__c</fullName>
        <label>Free Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Quantity__c</fullName>
        <label>Original Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sale Offer Settings</label>
</CustomObject>